<resources>
    <string name="app_name">Calculator App</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="key_equal">&#160; = &#160;</string>
    <string name="key_addition">+</string>
    <string name="key_subtract">-</string>
    <string name="key_multiply">×</string>
    <string name="key_square_root">√</string>
    <string name="key_divide">÷</string>
    <string name="key_parentheses">( )</string>
    <string name="key_ac">AC</string>
    <string name="default_number">0</string>
    <string name="calculator_image">Calculator image</string>
    <string name="hint">0</string>
    <string name="dark_or_day">Choose day or night theme</string>
    <string name="settings">Settings</string>
    <string name="dark_theme_btn">Dark theme</string>
    <string name="light_theme">Light theme</string>
    <string name="back_btn">back</string>
</resources>
