<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/calculator_image"
        android:src="@drawable/mathematical" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:id="@+id/keyboard_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:columnCount="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/key_ac"
                style="@style/ButtonStyleLightGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_ac" />

            <Button
                android:id="@+id/key_plus_minus"
                style="@style/ButtonStyleLightGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_plus_minus" />

            <Button
                android:id="@+id/Square_root"
                style="@style/ButtonStyleLightGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_Square_root" />

            <Button
                android:id="@+id/key_divide"
                style="@style/ButtonStyleOrange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_divide" />

            <Button
                android:id="@+id/key_7"
                style="@style/ButtonStyleDarkGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_7" />

            <Button
                android:id="@+id/key_8"
                style="@style/ButtonStyleDarkGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_8" />

            <Button
                android:id="@+id/key_9"
                style="@style/ButtonStyleDarkGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_9" />

            <Button
                android:id="@+id/key_multiply"
                style="@style/ButtonStyleOrange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/multiply" />

            <Button
                android:id="@+id/key_4"
                style="@style/ButtonStyleDarkGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_4" />

            <Button
                android:id="@+id/key_5"
                style="@style/ButtonStyleDarkGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_5" />


            <Button
                android:id="@+id/key_6"
                style="@style/ButtonStyleDarkGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_6" />

            <Button
                android:id="@+id/key_subtract"
                style="@style/ButtonStyleOrange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/subtract" />

            <Button
                android:id="@+id/key_1"
                style="@style/ButtonStyleDarkGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_1" />

            <Button
                android:id="@+id/key_2"
                style="@style/ButtonStyleDarkGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_2" />

            <Button
                android:id="@+id/key_3"
                style="@style/ButtonStyleDarkGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_3" />

            <Button
                android:id="@+id/key_addition"
                style="@style/ButtonStyleOrange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_addition" />

            <Button
                android:id="@+id/key_0"
                style="@style/ButtonStyleDarkGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:text="@string/key_0" />

            <Button
                android:id="@+id/key_dot"
                style="@style/ButtonStyleDarkGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_dot" />

            <Button
                android:id="@+id/key_equal"
                style="@style/ButtonStyleOrange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/key_equal" />

        </GridLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toTopOf="@+id/keyboard_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#212121"
                android:text="@string/default_number"
                android:textColor="#F5F5F5"
                android:textSize="40sp" />
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>